tests/negative/neg_try_send_use_after_move.safe
-- Test: neg_try_send_use_after_move
-- Description: Access-typed channel elements are rejected before try_send ownership checks run.
-- Expected: REJECT source_frontend_error

package Neg_Try_Send_Use_After_Move

   type Payload is record
      Value : Integer;

   type Payload_Ptr is access Payload;

   channel Data_Ch : Payload_Ptr capacity 1;

   function Run
      Source  : Payload_Ptr = new ((Value = 1) as Payload);
      Success : Boolean = False;

      try_send Data_Ch, Source, Success;
      Source.all.Value = 2;

